--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Playfair+Display:ital,wght@0,400;0,700;0,900;1,400;1,700&family=Space+Grotesk:wght@300;400;500;600&display=swap" rel="stylesheet" />
 
   <script src="https://cdn.tailwindcss.com"></script>
 
@@ -34,7 +34,10 @@
     ═══════════════════════════════════════════════ */
     *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
 
-    html { cursor: none; scroll-behavior: auto; }
+    html {
+      scroll-behavior: auto;
+      overscroll-behavior-y: none;
+    }
 
     body {
       background: var(--bg);
@@ -43,6 +46,7 @@
       font-weight: 300;
       overflow-x: hidden;
       -webkit-font-smoothing: antialiased;
+      overscroll-behavior-y: none;
     }
 
     /* ═══════════════════════════════════════════════
@@ -67,50 +71,6 @@
       100% { transform: translate( 2%,  -3%); }
     }
 
-    /* ═══════════════════════════════════════════════
-       CURSOR
-    ═══════════════════════════════════════════════ */
-    #c-dot {
-      position: fixed;
-      width: 6px; height: 6px;
-      background: var(--gold);
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 9999;
-      will-change: transform;
-    }
-    #c-ring {
-      position: fixed;
-      width: 36px; height: 36px;
-      border: 1px solid rgba(201,168,76,.45);
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 9998;
-      will-change: transform;
-      display: flex; align-items: center; justify-content: center;
-      transition: width .24s cubic-bezier(.16,1,.3,1),
-                  height .24s cubic-bezier(.16,1,.3,1),
-                  background .22s ease,
-                  border-color .22s ease;
-    }
-    #c-ring.big {
-      width: 70px; height: 70px;
-      background: rgba(201,168,76,.07);
-      border-color: var(--gold);
-    }
-    #c-label {
-      font-size: 8px; font-weight: 600;
-      letter-spacing: .13em; text-transform: uppercase;
-      color: var(--gold);
-      opacity: 0; transition: opacity .16s;
-      pointer-events: none; white-space: nowrap;
-    }
-    #c-ring.big #c-label { opacity: 1; }
-
-    @media (pointer: coarse) {
-      #c-dot, #c-ring { display: none !important; }
-      html { cursor: auto; }
-    }
 
     /* ═══════════════════════════════════════════════
        NAV
@@ -148,7 +108,7 @@
     ═══════════════════════════════════════════════ */
     #hero {
       position: relative;
-      min-height: 100svh;
+      min-height: 100dvh;
       display: flex; flex-direction: column; justify-content: flex-end;
       padding: 0 5vw 8vh;
       overflow: hidden;
@@ -401,7 +361,7 @@
        FOOTER
     ═══════════════════════════════════════════════ */
     #footer {
-      min-height: 100svh;
+      min-height: 100dvh;
       display: flex; flex-direction: column;
       align-items: center; justify-content: center;
       text-align: center; padding: 8vh 5vw;
@@ -572,7 +532,7 @@
       .tl-card { padding: 1.2rem; }
 
       /* Footer */
-      #footer { min-height: 80svh; padding: 10vh 6vw; }
+      #footer { min-height: 80dvh; padding: 10vh 6vw; }
       .footer-h {
         font-size: clamp(2rem, 10.5vw, 3.2rem);
         margin-bottom: 1.5rem;
@@ -599,9 +559,6 @@
 <!-- GRAIN -->
 <div id="grain" aria-hidden="true"></div>
 
-<!-- CURSOR -->
-<div id="c-dot"  aria-hidden="true"></div>
-<div id="c-ring" aria-hidden="true"><span id="c-label"></span></div>
 
 <!-- ══════════════════════ NAV ══════════════════════ -->
 <nav id="nav" role="navigation" aria-label="Главная навигация">
@@ -669,10 +626,13 @@
     <div class="proj-row v-l fu">
       <div class="vid" data-hover="PLAY">
         <iframe
-          src="https://dzen.ru/video/watch/68943e000251cb27748ecacc"
+          src="https://dzen.ru/embed/oHEbqN58IAAA?from_block=partner&from=zen&mute=0&autoplay=0&tv=0"
+          class="w-full aspect-video rounded-xl shadow-lg"
           title="Короткий метр с Сергеем Гилёвым"
-          allow="autoplay; fullscreen"
+          allow="autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
           allowfullscreen
+          frameborder="0"
+          scrolling="no"
           loading="lazy"
         ></iframe>
       </div>
@@ -732,11 +692,9 @@
       <div class="s-card fu">
         <div class="s-card-thumb" style="background:#000;">
           <!-- photo collage: 1 large left + 2x2 right -->
-          <div style="position:absolute;inset:0;display:grid;grid-template-columns:2fr 1fr 1fr;grid-template-rows:1fr 1fr;gap:2px;">
-            <img src="memento%20mori/IMG_8083.JPG"               alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="memento%20mori/IMG_8093.JPG"               alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="memento%20mori/IMG_8253.JPG"               alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="memento%20mori/IMG_8459.JPG"               alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
+          <div style="position:absolute;inset:0;display:grid;grid-template-columns:3fr 2fr;grid-template-rows:1fr 1fr;gap:2px;">
+            <img src="memento%20mori/IMG_8083.JPG"                  alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="memento%20mori/IMG_8093.JPG"                  alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
             <img src="memento%20mori/photo_2025-05-31_19-19-47.jpg" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
           </div>
           <!-- dark overlay + italic title overlay -->
@@ -856,7 +814,7 @@
 
   <div class="s-hdr-center">
     <p class="s-eye fu">02 — Опыт</p>
-    <h2 class="s-title fu">Фестивали &amp;<br><em>стажировки</em></h2>
+    <h2 class="s-title fu" style="font-family:'Bebas Neue',sans-serif;font-weight:400;letter-spacing:.04em;font-size:clamp(3rem,8vw,7rem);line-height:.92;">Фестивали &amp;<br><em style="font-style:normal;color:var(--gold);">стажировки</em></h2>
   </div>
 
   <div class="tl-wrap" id="tl-wrap">
@@ -943,16 +901,24 @@
 ══════════════════════════════════════════════════ */
 gsap.registerPlugin(ScrollTrigger);
 
-/* ── Lenis smooth scroll ── */
-const lenis = new Lenis({
-  duration: 1.4,
-  easing: t => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-});
+/* ── Lenis: только на десктопе (≥1024px и не тач-устройство) ── */
+const IS_DESKTOP = window.innerWidth >= 1024 && !('ontouchstart' in window);
+let lenis = null;
 
-lenis.on('scroll', ScrollTrigger.update);
+if (IS_DESKTOP) {
+  lenis = new Lenis({
+    duration: 1.4,
+    easing: t => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+  });
 
-gsap.ticker.add(time => lenis.raf(time * 1000));
-gsap.ticker.lagSmoothing(0);
+  lenis.on('scroll', ScrollTrigger.update);
+  gsap.ticker.add(time => lenis.raf(time * 1000));
+  gsap.ticker.lagSmoothing(0);
+} else {
+  /* на мобилках ScrollTrigger слушает нативный скролл */
+  ScrollTrigger.normalizeScroll(false);
+  window.addEventListener('scroll', ScrollTrigger.update, { passive: true });
+}
 
 /* ── Nav scroll class ── */
 ScrollTrigger.create({
@@ -966,46 +932,16 @@ ScrollTrigger.create({
 document.querySelectorAll('a[href^="#"]').forEach(a => {
   a.addEventListener('click', e => {
     const target = document.querySelector(a.getAttribute('href'));
-    if (target) { e.preventDefault(); lenis.scrollTo(target, { offset: -90 }); }
+    if (!target) return;
+    e.preventDefault();
+    if (lenis) {
+      lenis.scrollTo(target, { offset: -90 });
+    } else {
+      target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+    }
   });
 });
 
-/* ══════════════════════════════════════════════════
-   CUSTOM CURSOR
-══════════════════════════════════════════════════ */
-const dot    = document.getElementById('c-dot');
-const ring   = document.getElementById('c-ring');
-const clabel = document.getElementById('c-label');
-
-// Center both elements via GSAP (avoids CSS transform conflict)
-gsap.set([dot, ring], { xPercent: -50, yPercent: -50 });
-
-const toDotX  = gsap.quickTo(dot,  'x', { duration: .07,  ease: 'power3' });
-const toDotY  = gsap.quickTo(dot,  'y', { duration: .07,  ease: 'power3' });
-const toRingX = gsap.quickTo(ring, 'x', { duration: .28,  ease: 'power2' });
-const toRingY = gsap.quickTo(ring, 'y', { duration: .28,  ease: 'power2' });
-
-window.addEventListener('mousemove', e => {
-  toDotX(e.clientX);  toDotY(e.clientY);
-  toRingX(e.clientX); toRingY(e.clientY);
-});
-
-// Add data-hover to local video containers
-document.querySelectorAll('.vid-local').forEach(el => {
-  if (!el.dataset.hover) el.dataset.hover = 'PLAY';
-});
-
-// Elements with explicit data-hover labels
-document.querySelectorAll('[data-hover]').forEach(el => {
-  el.addEventListener('mouseenter', () => {
-    ring.classList.add('big');
-    clabel.textContent = el.dataset.hover;
-  });
-  el.addEventListener('mouseleave', () => {
-    ring.classList.remove('big');
-    clabel.textContent = '';
-  });
-});
 
 /* ══════════════════════════════════════════════════
    SPLIT HERO TITLE
@@ -1171,7 +1107,13 @@ gsap.from('#footer-h', {
       closeMenu();
       if (target) {
         e.preventDefault();
-        setTimeout(() => lenis.scrollTo(target, { offset: -70 }), 380);
+        setTimeout(() => {
+          if (lenis) {
+            lenis.scrollTo(target, { offset: -70 });
+          } else {
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        }, 380);
       }
     });
   });
