--- a/index.html
+++ b/index.html
@@ -682,8 +682,6 @@
 
   <div class="proj-list">
 
-    <p class="proj-subsec fu">Большие работы</p>
-
     <!-- ── Проект 1: Короткий метр с Гилёвым (Дзен) ── -->
     <div class="proj-row v-l fu">
       <div class="vid" data-hover="PLAY">
@@ -758,9 +756,9 @@
       <div class="proj-media-stack">
         <div class="proj-photos rounded-xl overflow-hidden shadow-lg" style="background:#000;position:relative;">
           <div style="position:absolute;inset:0;display:grid;grid-template-columns:3fr 2fr;grid-template-rows:1fr 1fr;gap:2px;">
-            <img src="memento%20mori/IMG_8083.JPG" alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="memento%20mori/IMG_8093.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="memento%20mori/photo_2025-05-31_19-19-47.jpg" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="memento%20mori/IMG_8014.JPG" alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="memento%20mori/IMG_8025.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="memento%20mori/IMG_8051.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
           </div>
           <div style="position:absolute;inset:0;background:linear-gradient(to top,rgba(8,8,8,.82) 0%,rgba(8,8,8,.15) 55%,rgba(8,8,8,.35) 100%);pointer-events:none" aria-hidden="true"></div>
         </div>
@@ -839,8 +837,6 @@
       </div>
     </div>
 
-    <p class="proj-subsec fu">Режиссёрские работы</p>
-
     <!-- ── Этюд «Гадали» ── -->
     <div class="proj-row v-r fu">
       <div>
@@ -860,22 +856,24 @@
       ></iframe>
     </div>
 
-    <p class="proj-subsec fu">Журналистские работы</p>
-
     <!-- ── Бионические протезы ── -->
     <div class="proj-row v-l fu">
       <div class="proj-media-stack">
         <div class="proj-photos rounded-xl overflow-hidden shadow-lg" style="background:#000;position:relative;">
           <div style="position:absolute;inset:0;display:grid;grid-template-columns:3fr 2fr;grid-template-rows:1fr 1fr;gap:2px;">
-            <img src="protez/IMG_8534.JPG" alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="protez/IMG_8568.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
-            <img src="protez/IMG_8687.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="protez/IMG_8641.JPG" alt="" style="grid-row:1/3;width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="protez/IMG_8229.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
+            <img src="protez/IMG_8459.JPG" alt="" style="width:100%;height:100%;object-fit:cover;display:block;">
           </div>
           <div style="position:absolute;inset:0;background:linear-gradient(to top,rgba(8,8,8,.82) 0%,rgba(8,8,8,.1) 55%,rgba(8,8,8,.3) 100%);pointer-events:none" aria-hidden="true"></div>
         </div>
-        <div class="vid-placeholder w-full aspect-video rounded-xl shadow-lg" style="background:linear-gradient(135deg,rgba(20,18,15,.9) 0%,rgba(12,11,10,.95) 100%);display:flex;align-items:center;justify-content:center;border:1px solid rgba(201,168,76,.12);" aria-label="Видео">
-          <span style="font-size:.6rem;letter-spacing:.2em;text-transform:uppercase;color:var(--t25);">Добавьте ссылку на видео</span>
-        </div>
+        <iframe
+          src="https://rutube.ru/play/embed/b172314c12c823f1042bdd21fbd57ede/?p=trnwCzJ1kqa2VLUNPf21fA"
+          class="w-full aspect-video rounded-xl shadow-lg"
+          frameborder="0"
+          allow="clipboard-write; autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
+          allowfullscreen
+        ></iframe>
       </div>
       <div>
         <div class="roles"><span class="role-tag">Продюсер</span></div>
@@ -893,16 +891,24 @@
         <p class="proj-p">Журналистская работа. Новостное интервью — продюсирование и организация съёмок.</p>
         <div style="margin-top:1.4rem;"><span style="font-size:.6rem;font-weight:500;letter-spacing:.18em;text-transform:uppercase;color:var(--t25);">NEWS · ГИТР · 2025</span></div>
       </div>
-      <div class="vid-placeholder w-full aspect-video rounded-xl shadow-lg" style="background:linear-gradient(135deg,rgba(20,18,15,.9) 0%,rgba(12,11,10,.95) 100%);display:flex;align-items:center;justify-content:center;border:1px solid rgba(201,168,76,.12);" aria-label="Видео">
-        <span style="font-size:.6rem;letter-spacing:.2em;text-transform:uppercase;color:var(--t25);">Добавьте ссылку на видео</span>
-      </div>
+      <iframe
+        src="https://rutube.ru/play/embed/4c3649d15ad805c448cae955978de3b6/?p=Tg6XM4rNK9xn7IgnfOmHEA"
+        class="w-full aspect-video rounded-xl shadow-lg"
+        frameborder="0"
+        allow="clipboard-write; autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
+        allowfullscreen
+      ></iframe>
     </div>
 
-    <!-- ── Интервью с ветеринаром ── -->
+    <!-- ── Интервью с ветеринаром (Rutube) ── -->
     <div class="proj-row v-l fu">
-      <div class="vid-placeholder w-full aspect-video rounded-xl shadow-lg" style="background:linear-gradient(135deg,rgba(20,18,15,.9) 0%,rgba(12,11,10,.95) 100%);display:flex;align-items:center;justify-content:center;border:1px solid rgba(201,168,76,.12);" aria-label="Видео">
-        <span style="font-size:.6rem;letter-spacing:.2em;text-transform:uppercase;color:var(--t25);">Добавьте ссылку на видео</span>
-      </div>
+      <iframe
+        src="https://rutube.ru/play/embed/42cc35701fa60aba408dd739e2343e0a/?p=fO55fmPmqum80sUQVafPhw"
+        class="w-full aspect-video rounded-xl shadow-lg"
+        frameborder="0"
+        allow="clipboard-write; autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
+        allowfullscreen
+      ></iframe>
       <div>
         <div class="roles"><span class="role-tag">Продюсер</span></div>
         <h3 class="proj-h">Интервью<br>с ветеринаром</h3>
@@ -911,7 +917,7 @@
       </div>
     </div>
 
-    <!-- ── Точный выстрел ── -->
+    <!-- ── Точный выстрел (Rutube) ── -->
     <div class="proj-row v-r fu">
       <div>
         <div class="roles"><span class="role-tag">Продюсер</span></div>
@@ -919,9 +925,13 @@
         <p class="proj-p">Журналистский репортаж. Продюсирование и организация съёмок.</p>
         <div style="margin-top:1.4rem;"><span style="font-size:.6rem;font-weight:500;letter-spacing:.18em;text-transform:uppercase;color:var(--t25);">REPORT · ГИТР · 2025</span></div>
       </div>
-      <div class="vid-placeholder w-full aspect-video rounded-xl shadow-lg" style="background:linear-gradient(135deg,rgba(20,18,15,.9) 0%,rgba(12,11,10,.95) 100%);display:flex;align-items:center;justify-content:center;border:1px solid rgba(201,168,76,.12);" aria-label="Видео">
-        <span style="font-size:.6rem;letter-spacing:.2em;text-transform:uppercase;color:var(--t25);">Добавьте ссылку на видео</span>
-      </div>
+      <iframe
+        src="https://rutube.ru/play/embed/bd00ef55a6213c17635d27c846e7a230/?p=tNQ3W3rUoT1ybZamp-SG9w"
+        class="w-full aspect-video rounded-xl shadow-lg"
+        frameborder="0"
+        allow="clipboard-write; autoplay; fullscreen; accelerometer; gyroscope; picture-in-picture; encrypted-media"
+        allowfullscreen
+      ></iframe>
     </div>
 
   </div>
